# OGD

./: .replit  README.md  app.py  pyproject.toml  replit.md
attached_assets/: Pasted--Online-Geospatial-Dashboard-for-Climate-Resilient-Bengaluru-Problem-Context-Bengaluru-one-of-1759040926394_1759040926398.txt
components/: air_quality.py  chatbot.py  community_reports.py  heat_map.py  urban_growth.py  water_monitoring.py
data/: bengaluru_data.py
services/: gemini_service.py  nasa_service.py  weather_service.py
utils/: data_processing.py  data_utils.py  map_utils.py
