[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.20.0",
    "openai>=1.109.1",
    "streamlit-folium>=0.25.2",
    "streamlit>=1.50.0",
    "plotly>=6.3.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
]
